--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Working with Graphics</title>
+		<title>Shader Sketchpad</title>
 		<meta charset="utf-8">
 		<style>
 			html, body {
@@ -19,6 +19,6 @@
 
 	<body>
 		<canvas></canvas>
-		<script src="/dist/raycast.bundle.js"></script>
+		<script src="/dist/sketchpad.bundle.js"></script>
 	</body>
 </html>
